# e-commerce-team-Avatar

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  requirement.txt  requirements.txt  schema.yaml  schema.yml
accounts/: models.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_location.py  test_secur.py  test_seller.py
cart/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_alter_cartitem_product_delete_product.py
e_commerce/: schema_hooks.py  settings.py  urls.py
payments/: views.py
product/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_attribute_brand_attributevalue_product_productimage_and_more.py
